--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write . --ignore-path .gitignore",
     "lint": "eslint . --ignore-path .gitignore --fix",
     "fix-style": "npm run format && npm run lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "setup": "ts-node src/setup.ts"
   },
   "repository": {
     "type": "git",
@@ -46,8 +47,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql2": "^3.2.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.29.3"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.29.3",
+    "sequelize-typescript": "^2.1.5"
   }
 }
